update convention type1 and 2 display following options choosen

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -540,3 +540,12 @@ table.fullwidth {
 .apilos-form-label--strike {
   text-decoration: line-through;
 }
+
+
+#boxThis.box {
+  margin-top: 0;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 9999;
+}
