--- a/templates/conventions/type1and2_options.html
+++ b/templates/conventions/type1and2_options.html
@@ -1,43 +1,47 @@
 
 {% if convention.bailleur.is_type1and2 %}
-    <div class="fr-grid-row fr-grid-row--gutters">
-        <div class="fr-col-12 fr-col-lg-12">
-            <div class="fr-card fr-card--no-arrow">
-                <div class="fr-card__body">
-                    <div class="block--row-strech" id="{{object_field}}_div">
-                        <div class="block--row-strech-1">
-                            <h4 class="fr-card__title">
-                                Convention de type I & II
-                            </h4>
-                        </div>
-                    </div>
-                    <form method="post" action="" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <div class="fr-grid-row fr-grid-row--gutters">
-                            <div class="fr-col-12 fr-col-lg-6">
-                                {% include "common/form/input_select.html" with form_input=ConventionType1and2Form.type1and2 with_empty_option=True editable=True %}
+    {% with type1and2editable=convention.isnt_validated %}
+        <div class="fr-grid-row fr-grid-row--gutters">
+            <div class="fr-col-12 fr-col-lg-12">
+                <div class="fr-card fr-card--no-arrow">
+                    <div class="fr-card__body">
+                        <div class="block--row-strech" id="{{object_field}}_div">
+                            <div class="block--row-strech-1">
+                                <h4 class="fr-card__title">
+                                    Convention de type I & II
+                                </h4>
                             </div>
-                            <div class="fr-col-12" id="type2_options" {% if ConventionType1and2Form.type1and2.value != 'Type2'%}hidden{% endif %}>
-                                <h4 class="fr-card__title">Options de la convention de type II</h4>
+                        </div>
+                        <form method="post" action="" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <div class="fr-grid-row fr-grid-row--gutters">
+                                <div class="fr-col-12 fr-col-lg-6">
+                                    {% include "common/form/input_select.html" with form_input=ConventionType1and2Form.type1and2 with_empty_option=True editable=type1and2editable %}
+                                </div>
+                                <div class="fr-col-12" id="type2_options" {% if ConventionType1and2Form.type1and2.value != 'Type2'%}hidden{% endif %}>
+                                    <h4 class="fr-card__title">Options de la convention de type II</h4>
 
-                                <p><i>Décochez pour rayer les mentions inutiles</i></p>
-                                {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option1 strike_unchecked=True editable=True %}
-                                {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option2 strike_unchecked=True editable=True %}
-                                {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option3 strike_unchecked=True editable=True %}
-                                {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option4 strike_unchecked=True editable=True %}
-                                {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option5 strike_unchecked=True editable=True %}
-                                {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option6 strike_unchecked=True editable=True %}
-                                {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option7 strike_unchecked=True editable=True %}
-                                {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option8 strike_unchecked=True editable=True %}
+                                    <p><i>Décochez pour rayer les mentions inutiles</i></p>
+                                    {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option1 strike_unchecked=True editable=type1and2editable %}
+                                    {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option2 strike_unchecked=True editable=type1and2editable %}
+                                    {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option3 strike_unchecked=True editable=type1and2editable %}
+                                    {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option4 strike_unchecked=True editable=type1and2editable %}
+                                    {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option5 strike_unchecked=True editable=type1and2editable %}
+                                    {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option6 strike_unchecked=True editable=type1and2editable %}
+                                    {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option7 strike_unchecked=True editable=type1and2editable %}
+                                    {% include "common/form/input_checkbox.html" with form_input=ConventionType1and2Form.type2_lgts_concernes_option8 strike_unchecked=True editable=type1and2editable %}
+                                </div>
                             </div>
-                        </div>
-                        <button class="fr-btn fr-my-1w">
-                            Enregistrer
-                        </button>
-                    </form>
-                    <script type="text/javascript" nonce="{{request.csp_nonce}}">init_type_two_options()</script>
+                            {% if type1and2editable %}
+                                <button class="fr-btn fr-my-1w">
+                                    Enregistrer
+                                </button>
+                            {% endif %}
+                        </form>
+                        <script type="text/javascript" nonce="{{request.csp_nonce}}">init_type_two_options()</script>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    {% endwith %}
 {% endif %}
