simplify javascript with sticky css option

--- a/templates/conventions/common/form_header.html
+++ b/templates/conventions/common/form_header.html
@@ -1,9 +1,9 @@
 {% if convention %}
 
-    <div id="boxHere"></div>
-    <div class='background-contrast-grey950' id="boxThis">
+    <div class='background-contrast-grey950 fr-pt-2w'></div>
+    <div class='background-contrast-grey950{% if False %} apilos-sticky-top{% endif %} fr-pt-2w'>
         <div class="fr-container">
-            <div class="fr-col-12 fr-pt-3w fr-pb-2w">
+            <div class="fr-col-12 fr-pb-2w">
                 <div class="fr-highlight">
                     <h1>{{convention.programme.nom}}</h1>
                 </div>
@@ -57,24 +57,5 @@
             </div>
         </div>
     </div>
-
-    {% if False %}
-        <script type="text/javascript" nonce="{{request.csp_nonce}}">
-            function boxtothetop() {
-                var windowTop = window.scrollY;
-                var top = document.getElementById('boxHere').offsetTop;
-                if(windowTop > top) {
-                    document.getElementById('boxHere').style.height = document.getElementById('boxThis').offsetHeight + "px";
-                    document.getElementById('boxThis').classList.add('box')
-                } else {
-                    document.getElementById('boxThis').classList.remove('box')
-                    document.getElementById('boxHere').style.height = "0px";
-                }
-            }
-            window.onscroll = function(e) {
-                boxtothetop();
-            };
-        </script>
-    {% endif %}
 
 {% endif %}
