--- a/static/css/main.css
+++ b/static/css/main.css
@@ -542,10 +542,9 @@ table.fullwidth {
 }
 
 
-#boxThis.box {
-  margin-top: 0;
-  position: fixed;
-  width: 100%;
+.apilos-sticky-top {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
   top: 0;
   z-index: 9999;
 }
