--- a/templates/conventions/type1and2_options.html
+++ b/templates/conventions/type1and2_options.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 {% if convention.bailleur.is_type1and2 %}
     {% with type1and2editable=convention.isnt_validated %}
         <div class="fr-grid-row fr-grid-row--gutters">
@@ -12,6 +12,10 @@
                                 </h4>
                             </div>
                         </div>
+                        <p>
+                            Les paramètres des conventions de type I et de Type II peuvent-être édités par la bailleur et par l'instructeur.<br>
+                            N'hésitez pas laisser des commentaires et à notifier votre vis-à-vis en cas d'incertitude.
+                        </p>
                         <form method="post" action="" enctype="multipart/form-data">
                             {% csrf_token %}
                             <div class="fr-grid-row fr-grid-row--gutters">
