--- a/static/css/main.css
+++ b/static/css/main.css
@@ -281,7 +281,7 @@ textarea.fr-input:disabled, textarea.fr-input[disabled] {
   height: 32px;
   border-radius: 4px;
   display: inline-block;
-  margin: 0.1rem 0.2rem;
+  margin: 0rem 0.2rem;
 }
 
 .content__icons--checkbox {
@@ -381,9 +381,9 @@ textarea.fr-input:disabled, textarea.fr-input[disabled] {
   background-color: #EEEEEE;
 }
 
-.background-contrast-grey950:hover {
+/* .background-contrast-grey950:hover {
   background-color: #DDDDDD;
-}
+} */
 
 table.fullwidth {
   width: 100%;
@@ -535,4 +535,16 @@ table.fullwidth {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+}
+
+.apilos-form-label--strike {
+  text-decoration: line-through;
+}
+
+
+.apilos-sticky-top {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+  z-index: 9999;
 }
