--- a/templates/conventions/financement.html
+++ b/templates/conventions/financement.html
@@ -109,7 +109,7 @@
                                         <label class="fr-label fr-mb-1w" for="{{form.annee_fin_conventionnement.id_for_label}}">
                                             {{ form.annee_fin_conventionnement.label }}
                                             {% include "common/form/required_field.html" with form_input=form.annee_fin_conventionnement %}
-                                            {% include "common/help_field.html" with form_input=form.annee_fin_conventionnement %}
+                                            {% include "common/help_field.html" with form_input=form.annee_fin_conventionnement helptext_visible=True %}
                                         </label>
                                         <div class="block--row-strech fr-mt-1w">
                                             <div class="day-and-month">
