--- a/templates/common/help_field.html
+++ b/templates/common/help_field.html
@@ -1,12 +1,10 @@
 {% if form_input.help_text %}
-    &nbsp;<button class="fr-link fr-link--sm fr-fi-information-line content__helpicon" type='button' id="{{form_input.id_for_label}}_desc_button"></button>
-    <div id="{{form_input.id_for_label}}_description" hidden>
-        <span class="fr-hint-text">{{form_input.help_text}}</span>
-    </div>
-    <script type="text/javascript" nonce="{{request.csp_nonce}}">
-        document.addEventListener('DOMContentLoaded', function () {
-            document.getElementById("{{form_input.id_for_label}}_desc_button")
-                .addEventListener('click', function(){ toggle('{{form_input.id_for_label}}_description') });
-        });
-    </script>
+    {% if helptext_visible %}
+        <span class="fr-hint-text">{{ form_input.help_text }}</span>
+    {% else %}
+        &nbsp;<details>
+            <summary class="fr-link fr-link--sm fr-fi-information-line content__helpicon"></summary>
+            <span class="fr-hint-text">{{form_input.help_text}}</span>
+        </details>
+    {% endif %}
 {% endif %}
