small fixes after Audrey's review

--- a/templates/conventions/actions/back_to_instruction.html
+++ b/templates/conventions/actions/back_to_instruction.html
@@ -5,7 +5,7 @@
         </p>
         <p>
             Cette convention est en attente de signature, cependant,
-            s'il reste des modifications à apporter, nous avez la possibilité de la repasser en statut "Instruction requise".
+            s'il reste des modifications à apporter, vous avez la possibilité de la repasser en statut "Instruction requise".
             en cliquant sur le bouton ci-dessous
         </p>
         <form method="post" action="{% url 'conventions:save' convention_uuid=convention.uuid %}" data-turbo="false">
