--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -64,8 +64,13 @@
                             {% if user.is_authenticated %}
                                 <ul class="fr-links-group">
                                     <li class="fr-mx-2w">
-                                        Bonjour&nbsp;
-                                        <strong>{{ request.user }}</strong>
+                                        <div class="width-100">
+                                            Bonjour&nbsp;
+                                            <strong>{{ request.user }}</strong>
+                                        </div>
+                                        <a class="fr-mt-1w width-100" href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
+                                            <span class="fr-fi-question-line fr-mr-1w" aria-hidden="true"></span>Aide en ligne
+                                        </a>
                                     </li>
                                     <li class="apilos-navbar">
                                         <div class="btn-group">
@@ -75,9 +80,6 @@
                                             <div class="dropdown-menu dropdown-menu-right apilos-dropdown-menu">
                                                 <a href="{% url 'settings:profile' %}">
                                                     <span class="fr-fi-equalizer-line fr-mr-1w" aria-hidden="true"></span>Paramètres
-                                                </a>
-                                                <a href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
-                                                    <span class="fr-fi-question-line fr-mr-1w" aria-hidden="true"></span>Aide en ligne
                                                 </a>
                                                 {% if CERBERE_AUTH %}
                                                     <a href="{% url 'cas_ng_logout' %}?next=/">
