--- a/templates/conventions/actions/back_to_instruction.html
+++ b/templates/conventions/actions/back_to_instruction.html
@@ -16,7 +16,7 @@
         </form>
         <p>
             <span class="fr-icon-warning-line" aria-hidden="true"></span>
-            Une fois la convention en statut "Instructon requise", c'est l'instructeur (vous) qui aura la main sur la convention.
+            Une fois la convention en statut "Instruction requise", c'est l'instructeur qui aura la main sur la convention (c'est à dire vous-même).
             Si l'intervention du bailleur est nécéssaire, vous devrez alors lui renvoyer en cliquant sur le bouton "Demander des corrections au bailleur"
         </p>
     </div>
