--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -65,7 +65,7 @@
                             
                             {% include "common/form/input_upload.html" with form_input=form.reference_publication_acte form_input_files=form.reference_publication_acte_files object_name='programme' object_uuid=convention.programme.uuid textarea=True image_only=True file_list=convention.programme.reference_publication_acte_files.values object_field="programme__reference_publication_acte__"|add:form.uuid.value %}
                         </div>
-                        <div class="block--row-strech-1 fr-label fr-mt-1w fr-mb-2w fr-h4 fr-mt-3w">Références cadastrales</div>
+                        {% include "common/form/input_upload.html" with form_input=form.reference_cadastrale form_input_files=form.reference_cadastrale_files object_name='programme' object_uuid=convention.programme.uuid image_only=True file_list=convention.programme.reference_cadastrale_files.values object_field="programme__reference_cadastrale__"|add:form.uuid.value %}
                         <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
                             {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='cadastre' upform=upform  what="références cadastrales"%}
                             <hr class="fr-col-12 fr-my-3w">
@@ -141,8 +141,10 @@
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
                                     {% include "common/form/input_upload.html" with additional_informations=True form_input=form.certificat_adressage form_input_files=form.certificat_adressage_files  object_name='programme' object_uuid=convention.programme.uuid file_list=convention.programme.certificat_adressage_files.values object_field="programme__certificat_adressage__"|add:form.uuid.value %}
                                 </div>
+                                <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                    {% include "common/form/input_upload.html" with additional_informations=True form_input=form.effet_relatif form_input_files=form.effet_relatif_files  object_name='programme' object_uuid=convention.programme.uuid file_list=convention.programme.effet_relatif_files.values object_field="programme__effet_relatif__"|add:form.uuid.value %}
+                                </div>
                             </div>
-                            {% include "common/form/input_upload.html" with form_input=form.reference_cadastrale form_input_files=form.reference_cadastrale_files object_name='programme' object_uuid=convention.programme.uuid image_only=True file_list=convention.programme.reference_cadastrale_files.values object_field="programme__reference_cadastrale__"|add:form.uuid.value %}
                         </div>
 
                     </div>
