--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -63,8 +63,8 @@
                         <div class="fr-header__tools-links">
                             {% if user.is_authenticated %}
                                 <ul class="fr-links-group">
-                                    <li class="fr-mx-2w">
-                                        <div class="width-100">
+                                    <li class="fr-mx-2w apilos-flex-wrap">
+                                        <div class="width-100 apilos-d-block">
                                             Bonjour&nbsp;
                                             <strong>{{ request.user }}</strong>
                                         </div>
