--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -53,7 +53,7 @@
                             </div>
                         </div>
 
-                        <div class="bordered fr-my-3w">
+                        <div class="apilos-bordered fr-my-3w">
                             <p class="fr-text--xs notes">
                                 <i>Pour toutes les sections ci-dessous, vous avez la possibilité de renseigner les champs en saisissant les informations ou en téléversant des images.</i>
                             </p>
@@ -129,7 +129,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="bordered fr-my-3w">
+                        <div class="apilos-bordered fr-my-3w">
                             <p class="fr-text--xs notes">
                                 <i>Ces informations sont complémentaires et à destination de l’instructeur. Elles ne figureront pas dans le document final de la convention.</i>
                             </p>
