Branch s402 visibility faq (#176)
* remove all versions from bootstrap and dsfr and just keep one

* fix: selection - bailleur - operation

* fix: tooltipes cadastre edd

* update: add details/summary for tooltip + change of help texts

* update: add link for FAQ beyond username on header

* update: label in details/summary when tooltip + effet relatif + new apilos css class

* update: simplify comments section

* fix: alignement help text in upload input

* uodate: contact button + border + annexes introduction

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,6 +7,18 @@
   font-style: italic;
 }
 
+.apilos-flex-wrap {
+  flex-wrap: wrap;
+}
+
+.apilos-d-inline {
+  display: inline;
+}
+
+.apilos-d-block {
+  display: block;
+}
+
 .fr-fi--xxl:after, .fr-fi--xxl:before {
   font-size: 4rem!important;
 }
@@ -26,6 +38,16 @@
 .notes {
   color: #6A6A6A;
 }
+
+details > summary {
+  list-style: none;
+}
+details > summary::marker,
+details > summary::-webkit-details-marker {
+  display: none;
+}
+
+
 
 .warning-notification {
   color: #E10600;
@@ -51,6 +73,11 @@
 .apilos-fi-btn--secondary {
   width: 16px;
   filter: invert(14%) sepia(62%) saturate(6699%) hue-rotate(244deg) brightness(56%) contrast(131%);
+}
+
+.apilos-bordered {
+  border: solid 1px #ccc;
+  padding: 15px;
 }
 
 .dz {
@@ -139,6 +166,10 @@ textarea.fr-input:disabled, textarea.fr-input[disabled] {
 .header__logo {
   width:5rem;
 }
+.width-100 {
+  width: 100%;
+}
+
 
 .text--center {
   text-align: center;
