update: add effet relatif on recapitulatif and convention file

--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -265,6 +265,7 @@
                                         </tbody>
                                     </table>
                                 </div>
+                                {% include "common/display_text_and_files_if_exists.html" with  file_list=programme.effet_relatif_files.values %}
                             </div>
                         </div>
                     </div>
