inactive data turbo frame when send notification form, this will refresh the all page of recapituliatif

--- a/templates/conventions/actions/bailleur_notification.html
+++ b/templates/conventions/actions/bailleur_notification.html
@@ -13,7 +13,7 @@
                     Faites en part au bailleur</h4>
             {% endif %}
             <div>
-                <form method="post" action="{% url 'conventions:feedback' convention_uuid=convention.uuid %}">
+                <form method="post" action="{% url 'conventions:feedback' convention_uuid=convention.uuid %}" data-turbo="false">
                     {% csrf_token %}
                     <div class="fr-checkbox-group">
                         <input
