--- a/templates/conventions/actions/instructeur_notification.html
+++ b/templates/conventions/actions/instructeur_notification.html
@@ -13,7 +13,7 @@
                     Faites part de vos commentaires à l'instructeur ? </h4>
             {% endif %}
             <div>
-                <form method="post" action="{% url 'conventions:feedback' convention_uuid=convention.uuid %}">
+                <form method="post" action="{% url 'conventions:feedback' convention_uuid=convention.uuid %}" data-turbo="false">
                     {% csrf_token %}
                     <div class="fr-checkbox-group">
                         <input
